fix(style): Some strange display on Safari.

--- a/src/style/pagination.less
+++ b/src/style/pagination.less
@@ -7,9 +7,11 @@
 
   & > .atk-btn,
   & > .atk-input {
+    font-size: 15px;
+    height: 32px;
     border: 1px solid @color-border;
     border-radius: 3px;
-    padding: 1px 5px;
+    padding: 0 5px;
     text-align: center;
   }
 
@@ -17,6 +19,9 @@
     user-select: none;
     width: 70px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:hover {
       background: @color-bg-grey;
