--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -109,6 +109,7 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid @color-border;
+    height: @nav-height + 1px;
 
     .akt-curt-view-btn {
       display: flex;
@@ -362,6 +363,8 @@
       border: none;
       border-bottom: 2px solid @color-border;
       margin-bottom: 25px;
+      -webkit-appearance: none;
+      border-radius: 0;
     }
 
     button {
